# ohtu-mini

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE.md  README.md  app.py  fly.toml  pyproject.toml  schema.sql  tasks.py
.github/workflows/: pipeline.yml
docs/: commands.md  definition_of_done.md  development.md  loppudemo.md  publishing.md  raportti.md  retro.md  retro1.md  retro2.md
src/routes/: reference.py  routes.py  user.py
src/services/: reference.py  references.py  user.py
src/services/bibtex_files/: bibtex_1325.bib  bibtex_2.bib  bibtex_3.bib
src/tests/: index_test.py  test_index.py
src/tests/routes/: reference_route_test.py  user_route_test.py
src/tests/services/: reference_service_test.py  references_service_test.py  user_service_test.py  user_service_test_.py
src/tests/utils/: reference_type_test.py  validator_test.py
src/utils/: db.py  reference_type.py  validator.py
static/css/: global.css  login.css  main.css
static/js/: main.js
templates/: add.html  addbib.html  frontpage.html  index.html  layout.html  register.html  test.html
