[tool.poetry]
name = "ohtu-mini"
version = "0.1.0"
description = ""
authors = ["Roni Tuohino <tuohinoroni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
invoke = "^1.7.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
pg8000 = "^1.29.3"
sqlparse = "^0.4.3"
bibtexparser = "^1.4.0"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
coverage = "^6.5.0"
pytest = "^7.2.0"
pylint-flask = "^0.6"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
